--- a/VerbannteAutoren/Base.lproj/Main.storyboard
+++ b/VerbannteAutoren/Base.lproj/Main.storyboard
@@ -229,29 +229,34 @@
                                                     <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" lineBreakMode="wordWrap" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="HPu-Ou-0si">
-                                                            <rect key="frame" x="20" y="30" width="280" height="95"/>
+                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="280" placeholderIntrinsicHeight="17" text="Biographie" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZSh-L4-pHC">
+                                                            <rect key="frame" x="20" y="5" width="280" height="17"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" placeholderIntrinsicWidth="280" placeholderIntrinsicHeight="98" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="HPu-Ou-0si">
+                                                            <rect key="frame" x="20" y="25" width="280" height="116"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <color key="backgroundColor" red="0.37169164540816324" green="0.37169164540816324" blue="0.37169164540816324" alpha="1" colorSpace="calibratedRGB"/>
                                                             <string key="text">Otto Abeles (* 1. Mai 1879 in Rohatetz bei Nikolsburg, Mähren; † 25. Mai 1945 in Tröbnitz, Sachsen) war ein österreichischer Journalist, Schriftsteller, Musikkritiker und Zionist.</string>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Biographie" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZSh-L4-pHC">
-                                                            <rect key="frame" x="20" y="7" width="280" height="21"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ySW-zb-rJM">
-                                                            <rect key="frame" x="20" y="7" width="100" height="129"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        </imageView>
                                                     </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="trailing" secondItem="ZSh-L4-pHC" secondAttribute="trailing" constant="20" id="7KR-kV-c6z"/>
+                                                        <constraint firstItem="ZSh-L4-pHC" firstAttribute="leading" secondItem="EzB-fO-tPU" secondAttribute="leading" constant="20" id="NTD-kd-jt4"/>
+                                                        <constraint firstItem="ZSh-L4-pHC" firstAttribute="top" secondItem="EzB-fO-tPU" secondAttribute="top" constant="5" id="RF6-E1-FT1"/>
+                                                        <constraint firstItem="HPu-Ou-0si" firstAttribute="leading" secondItem="EzB-fO-tPU" secondAttribute="leading" constant="20" id="d0x-C3-DcY"/>
+                                                        <constraint firstAttribute="trailing" secondItem="HPu-Ou-0si" secondAttribute="trailing" constant="20" id="eSk-wx-B6b"/>
+                                                        <constraint firstAttribute="bottom" secondItem="HPu-Ou-0si" secondAttribute="bottom" id="fvB-ek-VY9"/>
+                                                        <constraint firstItem="HPu-Ou-0si" firstAttribute="top" secondItem="ZSh-L4-pHC" secondAttribute="bottom" constant="3" id="oyF-NV-BYf"/>
+                                                    </constraints>
                                                 </tableViewCellContentView>
                                                 <connections>
                                                     <outlet property="content" destination="HPu-Ou-0si" id="bEN-AN-PGO"/>
-                                                    <outlet property="image" destination="ySW-zb-rJM" id="5T5-nA-lft"/>
                                                     <outlet property="title" destination="ZSh-L4-pHC" id="2pq-l3-PbF"/>
                                                 </connections>
                                             </tableViewCell>
