--- a/VerbannteAutoren/Base.lproj/Main.storyboard
+++ b/VerbannteAutoren/Base.lproj/Main.storyboard
@@ -287,7 +287,86 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KqM-eC-9U7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2130" y="-157"/>
+            <point key="canvasLocation" x="2153" y="-157"/>
+        </scene>
+        <!--Author Detail View Controller - Autor-->
+        <scene sceneID="jlp-pi-A7D">
+            <objects>
+                <viewController title="Autor" automaticallyAdjustsScrollViewInsets="NO" id="UBP-s8-m0D" customClass="VAUAuthorDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iRc-ri-mlw"/>
+                        <viewControllerLayoutGuide type="bottom" id="M5p-Ey-K15"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ylb-qZ-y1I">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="141" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="hrd-dQ-y3v">
+                                <rect key="frame" x="0.0" y="66" width="320" height="364"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DetailCell" rowHeight="141" id="a6Q-qa-jlJ" customClass="VAUDetailTableViewCell">
+                                        <rect key="frame" x="0.0" y="22" width="320" height="141"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a6Q-qa-jlJ" id="VTl-ca-DSC">
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="141"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="280" placeholderIntrinsicHeight="17" text="Biographie" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glh-ON-gwa">
+                                                    <rect key="frame" x="20" y="11" width="280" height="17"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" placeholderIntrinsicWidth="280" placeholderIntrinsicHeight="98" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="kiS-OU-cVh">
+                                                    <rect key="frame" x="20" y="36" width="280" height="105"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <string key="text">Otto Abeles (* 1. Mai 1879 in Rohatetz bei Nikolsburg, Mähren; † 25. Mai 1945 in Tröbnitz, Sachsen) war ein österreichischer Journalist, Schriftsteller, Musikkritiker und Zionist.</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="19u-0V-ehe">
+                                                    <rect key="frame" x="130" y="11" width="61" height="123"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" priority="250" constant="123" id="F0d-sR-UIo"/>
+                                                        <constraint firstAttribute="width" priority="250" constant="61" id="g9V-eq-8ne"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="kiS-OU-cVh" secondAttribute="trailing" constant="20" id="078-fZ-Gw8"/>
+                                                <constraint firstAttribute="trailing" secondItem="glh-ON-gwa" secondAttribute="trailing" constant="20" id="1Gk-Wi-a62"/>
+                                                <constraint firstAttribute="bottom" secondItem="kiS-OU-cVh" secondAttribute="bottom" id="9XC-Yk-oDf"/>
+                                                <constraint firstAttribute="centerX" secondItem="19u-0V-ehe" secondAttribute="centerX" constant="-0.5" id="B8u-B8-ulB"/>
+                                                <constraint firstAttribute="bottom" secondItem="19u-0V-ehe" secondAttribute="bottom" priority="750" constant="7" id="R2D-qE-IHm"/>
+                                                <constraint firstItem="glh-ON-gwa" firstAttribute="top" secondItem="VTl-ca-DSC" secondAttribute="top" constant="11" id="RKb-eI-gou"/>
+                                                <constraint firstItem="19u-0V-ehe" firstAttribute="top" secondItem="VTl-ca-DSC" secondAttribute="top" priority="750" constant="11" id="Zbd-11-4bS"/>
+                                                <constraint firstItem="kiS-OU-cVh" firstAttribute="top" secondItem="glh-ON-gwa" secondAttribute="bottom" constant="8" id="hzx-Iw-vLw"/>
+                                                <constraint firstItem="kiS-OU-cVh" firstAttribute="leading" secondItem="VTl-ca-DSC" secondAttribute="leading" constant="20" id="i6u-Fr-33E"/>
+                                                <constraint firstItem="glh-ON-gwa" firstAttribute="leading" secondItem="VTl-ca-DSC" secondAttribute="leading" constant="20" id="kU4-Aa-TX1"/>
+                                                <constraint firstAttribute="centerY" secondItem="19u-0V-ehe" secondAttribute="centerY" constant="-2" id="pRF-ks-Wck"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="content" destination="kiS-OU-cVh" id="TmO-aV-7ZB"/>
+                                            <outlet property="image" destination="19u-0V-ehe" id="976-Wx-Bog"/>
+                                            <outlet property="title" destination="glh-ON-gwa" id="1rO-64-nU9"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Autor" id="4vz-fz-SHc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L5U-Ky-0zO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2093" y="493"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="o5G-CR-2l3">
@@ -302,7 +381,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="iWV-jO-EMZ" kind="relationship" relationship="viewControllers" id="1Rz-U8-vUY"/>
-                        <segue destination="a4d-oi-ZA6" kind="relationship" relationship="viewControllers" id="EUg-FH-hVj"/>
+                        <segue destination="EgV-xD-RF7" kind="relationship" relationship="viewControllers" id="EUg-FH-hVj"/>
                         <segue destination="Rso-dV-ErU" kind="relationship" relationship="viewControllers" id="9yR-l6-VXs"/>
                         <segue destination="b8X-U5-7ZK" kind="relationship" relationship="viewControllers" id="6fm-8f-8Bg"/>
                         <segue destination="88O-4V-eI4" kind="relationship" relationship="viewControllers" id="VrY-o1-pqg"/>
@@ -311,28 +390,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zFh-V5-hs5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="552" y="98"/>
-        </scene>
-        <!--View Controller - Zufälliger Autor-->
-        <scene sceneID="L1r-lZ-1oh">
-            <objects>
-                <viewController id="a4d-oi-ZA6" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Hnn-zC-M0f"/>
-                        <viewControllerLayoutGuide type="bottom" id="AHg-Vw-Awl"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Jt9-ez-I1K">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Zufälliger Autor" id="U6m-Ls-oJI"/>
-                    <connections>
-                        <segue destination="nlU-JU-rH1" kind="push" id="cCH-mC-aT2"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8Eq-qB-ewi" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1192" y="477"/>
         </scene>
         <!--Navigation Controller - Impressum-->
         <scene sceneID="ySj-aq-zuf">
@@ -372,6 +429,31 @@
             </objects>
             <point key="canvasLocation" x="1192" y="1654"/>
         </scene>
+        <!--Random Author View Controller - Zufälliger Autor-->
+        <scene sceneID="8Rv-H6-g1K">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EgV-xD-RF7" customClass="VAURandomAuthorViewController" sceneMemberID="viewController">
+                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
+                    <tabBarItem key="tabBarItem" title="Zufälliger Autor" id="U6m-Ls-oJI"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ftg-Yf-FGd">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="O1S-Tb-n1a">
+                        <rect key="frame" x="0.0" y="436" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" red="0.81960784313725488" green="0.23137254901960785" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </toolbar>
+                    <connections>
+                        <segue destination="UBP-s8-m0D" kind="relationship" relationship="rootViewController" id="Fuz-xx-jUu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="e6P-hn-pZ7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1573" y="441"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Collage_iPhone4.png" width="640" height="1009"/>
@@ -382,7 +464,4 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
-    <inferredMetricsTieBreakers>
-        <segue reference="gwu-Ns-lWF"/>
-    </inferredMetricsTieBreakers>
 </document>
