--- a/VerbannteAutoren/Base.lproj/Main.storyboard
+++ b/VerbannteAutoren/Base.lproj/Main.storyboard
@@ -66,7 +66,7 @@
                             <webView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Kl3-8l-AAO">
                                 <rect key="frame" x="0.0" y="65" width="320" height="366"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" red="1" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -106,38 +106,11 @@
             </objects>
             <point key="canvasLocation" x="1718" y="2257"/>
         </scene>
-        <!--Map View Controller - Karte-->
-        <scene sceneID="q6j-IB-INx">
-            <objects>
-                <viewController id="Rso-dV-ErU" customClass="VAUMapViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="UE7-8p-fbc"/>
-                        <viewControllerLayoutGuide type="bottom" id="vGP-Qk-pND"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="jV8-gy-9Hy">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="yyb-xp-hYH">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="432"/>
-                            </mapView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Karte" id="hMf-lT-F2K"/>
-                    <connections>
-                        <outlet property="mapView" destination="yyb-xp-hYH" id="EYu-jH-bZB"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="gUN-ah-Xya" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1192" y="1067"/>
-        </scene>
         <!--Navigation Controller - Autoren-->
         <scene sceneID="rgc-8a-741">
             <objects>
                 <navigationController definesPresentationContext="YES" id="iWV-jO-EMZ" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Autoren" id="8Bp-t3-6E0"/>
+                    <tabBarItem key="tabBarItem" title="Autoren" image="Contact.png" id="8Bp-t3-6E0"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pau-Z2-IYL">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -381,7 +354,6 @@
                     <connections>
                         <segue destination="iWV-jO-EMZ" kind="relationship" relationship="viewControllers" id="1Rz-U8-vUY"/>
                         <segue destination="EgV-xD-RF7" kind="relationship" relationship="viewControllers" id="EUg-FH-hVj"/>
-                        <segue destination="Rso-dV-ErU" kind="relationship" relationship="viewControllers" id="9yR-l6-VXs"/>
                         <segue destination="b8X-U5-7ZK" kind="relationship" relationship="viewControllers" id="6fm-8f-8Bg"/>
                         <segue destination="88O-4V-eI4" kind="relationship" relationship="viewControllers" id="VrY-o1-pqg"/>
                     </connections>
@@ -394,7 +366,7 @@
         <scene sceneID="ySj-aq-zuf">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="88O-4V-eI4" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Impressum" id="e0D-3x-fxP"/>
+                    <tabBarItem key="tabBarItem" title="Impressum" image="Signpost.png" id="e0D-3x-fxP"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cqO-Ym-7dx">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -413,7 +385,7 @@
         <scene sceneID="VCS-k5-aSk">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="b8X-U5-7ZK" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Über die Liste" id="4JS-iI-0py"/>
+                    <tabBarItem key="tabBarItem" title="Über die Liste" image="Albums.png" id="4JS-iI-0py"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="VM2-Vn-yWz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -433,7 +405,7 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="EgV-xD-RF7" customClass="VAURandomAuthorViewController" sceneMemberID="viewController">
                     <extendedEdge key="edgesForExtendedLayout" top="YES"/>
-                    <tabBarItem key="tabBarItem" title="Zufälliger Autor" id="U6m-Ls-oJI"/>
+                    <tabBarItem key="tabBarItem" title="Zufälliger Autor" image="Shuffle.png" id="U6m-Ls-oJI"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ftg-Yf-FGd">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -455,7 +427,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Albums.png" width="27" height="24"/>
         <image name="Collage_iPhone4.png" width="640" height="1009"/>
+        <image name="Contact.png" width="25" height="25"/>
+        <image name="Shuffle.png" width="25" height="20"/>
+        <image name="Signpost.png" width="25" height="25"/>
     </resources>
     <color key="tintColor" red="0.81960784313725488" green="0.23137254901960785" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
